2008-05-13  Jeff Rogers <dvrsn@diphi.com>

        * configure.in: add -nostartfiles flag to link line when -shared
		is already there.  Without this, build fails against tcl8.5
		* configure: regenerated

2007-05-11  Nathan Folkman <nathan.folkman@gmail.com>

        * nsproxy/nsproxylib.c: Fixed crash bug that occurred when trying
        to create more then one proxy pool. The proxy id now takes the 
        form of:

        <pool>-proxy-<number>

2007-03-12  Nathan Folkman <nathan.folkman@gmail.com>

        * nsd/tclhttp.c: Added preliminary support to allow sending and
        retrieving binary data correctly.

2006-12-15  Dossy Shiobara <dossy@panoptic.com>

	* nsd/driver.c (1.56): [BUG #1615787] Fix deadlock bug when driver
	  thread stalls under specific conditions.  Thanks to Jeff Rogers
	  and Gustaf Neumann.

2006-08-07  Dossy Shiobara <dossy@panoptic.com>

	* include/nsattributes.h (1.4): Provide default no-op defines for
	  gcc attributes correctly to enable builds on older gcc to work.
	  Previously, "may_alias" attribute resulted in gcc older than 3.3
	  to no longer build.  This minor change fixes this.

2006-07-07  Jim Davidson <jgdavidson@ool.com>

	* include/ns.h:
	* nsd/return.c: Added Ns_RegisterRedirect as a replacement
	to Ns_RegisterReturn which did not require a virtual server
	argument as expected.

	* nsd/server.c: Updated to call new Ns_RegisterRedirect,
	fixing bug #1518426

	* doc/Ns_ConnReturnStatus.3: Updated to document the new
	Ns_RegisterRedirect, removing reference to Ns_RegisterReturn.


2006-06-28  Nathan Folkman <nathan.folkman@gmail.com>

        * nsd/adpeval.c: Fixed crash bug in NsAdpLogError() when 
        a NULL adp->framePtr is encountered.


2006-06-27  Dossy Shiobara <dossy@panoptic.com>

	*** AOLserver 4.5.0 RELEASED ***

2006-06-27  tag aolserver_v45_r0

2006-06-27  Jim Davidson <jgdavidson@ool.com>

	* Makefile:
	* util/install.sh (new file): Restored pre-4.5 Unix install